--- a/Agda.cabal
+++ b/Agda.cabal
@@ -479,6 +479,7 @@ library
                     Agda.TypeChecking.MetaVars.Mention
                     Agda.TypeChecking.MetaVars.Occurs
                     Agda.TypeChecking.Monad.Base
+                    Agda.TypeChecking.Monad.Boundary
                     Agda.TypeChecking.Monad.Benchmark
                     Agda.TypeChecking.Monad.Builtin
                     Agda.TypeChecking.Monad.Caching
